package shapes;

public interface Shape {
    void accept(Visitor v);
}
